--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,30 @@
   </head>
 
   <body>
-    <%= yield %>
+
+  	<%= render 'layouts/header' %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+
+          <!-- вывод уведомлений и ошибок -->
+          <% if notice != nil %>
+            <p class="alert alert-success"><%= notice %></p>
+          <% end %>
+          <% if alert != nil %>
+            <p class="alert alert-error alert-danger"><%= alert %></p>
+          <% end %>
+
+                 
+          <%= yield %>
+
+        </div>
+      </div>
+
+    <hr/>
+    <%= debug(params) if Rails.env.development? %> 
+  </div>
+  
   </body>
 </html>
