add new and create methods to product_type

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
     </button>
 
-    <%= link_to 'Restaurant', products_path, class: 'navbar-brand', color: "#ff0033" %>
+    <%= link_to 'Restaurant', product_types_path, class: 'navbar-brand', color: "#ff0033" %>
  
     <ul class="nav navbar-nav">
     </ul>
