--- a/app/views/product_types/index.html.erb
+++ b/app/views/product_types/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Наше меню</h1>
 
 <%#= link_to 'просмотр категорий', product_type_path %>
-
-<%= link_to 'добавить категорию', new_product_type_path %>
+<%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
+<%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
 <%#= link_to 'удалить', product_type_path, method: :delete, data: { confirm: 'Вы уверены?' } %>
