--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -1,2 +1,5 @@
-<h1>ProductTypes#show</h1>
-<p>Find me in app/views/product_types/show.html.erb</p>
+<h1>Наше меню по категориям</h1>
+
+<%#= link_to 'просмотр категорий', product_type_path %>
+<%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
+<%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
