add form for creating product

--- a/app/views/product_types/index.html.erb
+++ b/app/views/product_types/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Наше меню</h1>
 
+Для добавления нового блюда войдите в нужную категорию меню<br/>
 <%= link_to 'Все меню |', product_types_path %>
 
 <%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
