--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -2,5 +2,14 @@
 
 <%= link_to 'Все меню |', product_types_path %>
 
+<!-- рендерим партиал с типом меню + ссылку для добавления еще одного типа меню -->
 <%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
 <%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
+
+<hr/>
+
+<!-- рендерим через партиал список меню данного типа -->
+<%= render partial: 'products/product' %>
+
+<!-- рендерим ссылку для добавления еще одного компонента меню -->
+<%= link_to 'Новое блюдо', new_product_type_product_path(product_type_id: @product_type.id) %>
