--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,15 +1,4 @@
-<%= form_with(model: product, local: true) do |form| %>
-  <% if product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
-
-      <ul>
-      <% product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= form_for [@product_type, product], url: product_type_products_path do |form| %>
 
   <div class="field">
     <%= form.label :title %>
