add create method

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Product</h1>
 
-<%= render 'form', product: @product %>
+<%= render partial: 'products/form', locals: {product: @product_type.products.build} %>
 
 <%= link_to 'Back', :back %>
