--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -8,8 +8,23 @@
 
 <hr/>
 
-<!-- рендерим через партиал список меню данного типа -->
-<%= render partial: 'products/product' %>
+<div id="products_table">
+  <table class="table table-border table-hover">
+    <thead>
+      <tr>
+        <th>Блюдо</th>
+        <th>Описание</th>
+        <th>Стоимость, грн</th>
+        <th></th>
+      </tr>
+    </thead>
+      
+    <!-- рендерим через партиал список меню данного типа -->
+    <%= render partial: 'products/product_table', collection: @products_by_product_type %>
+       
+    </table>
+  </div>
+
 
 <!-- рендерим ссылку для добавления еще одного компонента меню -->
 <%= link_to 'Новое блюдо', new_product_type_product_path(product_type_id: @product_type.id) %>
