prepeare to add edit method

--- a/app/views/products/_product_table.html.erb
+++ b/app/views/products/_product_table.html.erb
@@ -1,6 +1,8 @@
 <tr>
-  <th><%= product_table.title %></th>
+  <th><%= link_to product_table.title, 
+  			product_type_product_path(product_type_id: product_table.product_type_id, 
+  			id: product_table.id) %></th>
   <th><%= product_table.description %></th>
   <th><%= product_table.price %>, грн</th>
-  <th></th>
+  <th> <%= link_to 'Редактировать', edit_product_type_product_path(product_type_id: product_table.product_type_id, id: product_table.id) %> <> </th>
 </tr>
