--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@product_type, product], url: product_type_products_path do |form| %>
+<%= form_for [@product_type, product], url: product_type_products_path(product_type_id: @product_type.id) do |form| %>
 
   <div class="field">
     <%= form.label :title %>
