--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,5 @@
 <h1>Editing Product</h1>
 
-<%= render 'form', product: @product %>
+<%#= render partial: 'products/form', locals: {product: @product_type.products.find(params[:id])} %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Back', :back %>
