fixed bug with wrong updating

--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@product_type, product], url: product_type_products_path(product_type_id: @product_type.id) do |form| %>
+<%= form_for @product, url: product_type_product_path(product_type_id: @product.product_type_id) do |form| %>
 
   <div class="field">
     <%= form.label :title %>
