--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Product</h1>
 
-<%#= render partial: 'products/form', locals: {product: @product_type.products.find(params[:id])} %>
+<%= render partial: 'products/form_edit', locals: {product: @product} %>
 
 <%= link_to 'Back', :back %>
