--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -1,11 +1,16 @@
-<h1>Наше меню по категориям</h1>
+<h1>Наше меню по категориям: <%= @product_type.title %></h1>
 
 <br/>
+
 <%= link_to 'Все меню |', product_types_path %>
 
 <!-- рендерим партиал с типом меню + ссылку для добавления еще одного типа меню -->
 <%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
-<%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
+
+<%= link_to fa_icon('plus-square') + ' добавить вид меню', new_product_type_path %>|
+<%= link_to fa_icon('pencil-square-o') + 'ред.', edit_product_type_path %>
+<%= link_to fa_icon('window-close-o') + 'удал.', product_type_path, method: :delete, 
+    data: {confirm: 'Вы уверены? Все блюда из этого раздела меню будут также удалены'} %>
 
 <hr/>
 
