--- a/app/views/products/_product_table.html.erb
+++ b/app/views/products/_product_table.html.erb
@@ -5,6 +5,12 @@
   <th><%= product_table.description %></th>
   <th><%= product_table.price %> грн</th>
   <th>
-  	<%= link_to 'Редактировать', edit_product_type_product_path(product_type_id: product_table.product_type_id, id: product_table.id) %>|
-  	<%= link_to 'Удалить', product_type_product_path(product_type_id: product_table.product_type_id, id: product_table.id), method: :delete, data: { confirm: 'Вы уверены что хотите удалить блюдо?' } %>
+  	<%= link_to fa_icon('pencil-square-o') + 'ред.', 
+  		edit_product_type_product_path(product_type_id: product_table.product_type_id, 
+  		id: product_table.id) %>|
+  	<%= link_to fa_icon('times') + 'удалить', 
+  		product_type_product_path(product_type_id: product_table.product_type_id, 
+  		id: product_table.id), method: :delete, style: "color: red",
+  		data: { confirm: 'Вы уверены что хотите удалить блюдо?' } %>
+  </th>
 </tr>
