--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render partial: 'products/form', locals: {product: @product_type.products.build} %>
 
-<%= link_to 'Back', :back %>
+<%= link_to 'Back', product_type_path(id: @product_type.id) %>
