--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Product</h1>
+<h1>Редактировать блюдо</h1>
 
 <%= render partial: 'products/form_edit', locals: {product: @product} %>
 
-<%= link_to 'Back', product_type_path(id: @product_type.id) %>
+<%= link_to 'Назад', product_type_path(id: @product_type.id) %>
