--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Product</h1>
+<h1>Новое блюда</h1>
 
 <%= render partial: 'products/form', locals: {product: @product_type.products.build} %>
 
-<%= link_to 'Back', product_type_path(id: @product_type.id) %>
+<%= link_to 'Назад', product_type_path(id: @product_type.id) %>
