add authentication and registration

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,13 @@
 @import "bootstrap";
 @import "font-awesome";
 
+.btn {
+	color: white;
+	padding-top: 10px;
+}
+
+#header_name {
+	color: white;
+	vertical-align: center;
+	padding-top: 10px;
+}
