--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,24 @@
 <div class="navbar navbar-inverse navbar-static-top">
   <div class="container">
-    <button type="button" class="navbar-toggle navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
 
     <%= link_to 'Restaurant "Developers Life"', product_types_path, class: 'navbar-brand', color: "#ff0033" %>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
  
-    <ul class="nav navbar-nav">
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <a> 'Инфо'</a>
-    </ul>
+      <ul class="nav navbar-nav">
+      </ul>
+    
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li id="header_name">Здравствуйте, <%= current_user.name %> </li>
+          <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: "btn btn-primary btn-sm active" %>
+        <% else %>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <%= link_to 'Войти', new_user_session_path, class: "btn btn-primary btn-sm active" %> 
+            <%= link_to 'Зарегистрироваться', new_user_registration_path, class: "btn btn-success btn-sm active" %>
+        </div>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
