--- a/app/views/product_types/index.html.erb
+++ b/app/views/product_types/index.html.erb
@@ -5,7 +5,11 @@
 <%= link_to 'Все меню |', product_types_path %>
 
 <%= render partial: 'product_types/product_type', collection: @product_types, as: 'product_type' %>
-<%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
+
+<!-- если текущий пользователь - админ, то обображать элементы управления видами меню -->
+<% if user_admin %>
+  <%= link_to fa_icon(' plus-square') + ' добавить вид меню', new_product_type_path %>
+<% end %>
 
 <hr/>
 
