--- a/app/views/products/_product_table.html.erb
+++ b/app/views/products/_product_table.html.erb
@@ -1,3 +1,4 @@
+<!-- под названием product_table в данном партиале проходят экземпляры product -->
 <tr>
   <th><%= link_to product_table.title, 
   			product_type_product_path(product_type_id: product_table.product_type_id, 
@@ -15,6 +16,13 @@
   		  product_type_product_path(product_type_id: product_table.product_type_id, 
   		  id: product_table.id), method: :delete, style: "color: red",
   		  data: { confirm: 'Вы уверены что хотите удалить блюдо?' } %>
+    </th>
+  <% end %>
+
+  <!-- кнопки для заказа доступны, если юзер выполнил вход и не является админом -->
+  <% if user_login %>
+    <th>
+      <%= button_to 'В корзину', line_items_path(product_id: product_table.id) %>
     </th>
   <% end %>
   
