--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,12 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p> -->
+<h2>Меню вашего предварительного заказа</h2>
+<br/>
+
+<ul>
+  <% @cart.line_items.each do |item| %>
+  	<li><%= item.product.title %></li>
+  <% end %>
+</ul>
 
 <%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', carts_path %>
+<%= link_to 'Back', :back %>
