--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,7 +4,9 @@
 
 <ul>
   <% @cart.line_items.each do |item| %>
-  	<li><%= item.product.title %></li>
+  	<li>
+  	  <%= item.product.title %> - <%= item.quantity %> шт.
+  	</li>
   <% end %>
 </ul>
 
