--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,26 +1,1 @@
-<h2>Меню вашего предварительного заказа</h2>
-<br/>
-
-<table class="table table-bordered">
-  <% @cart.line_items.each do |item| %>
-    <tr>
-      <td><%= item.product.title %></td>
-      <td><%= item.quantity %> шт</td>
-      <td class="item_price"><%= item.total_price %> грн</td>
-    </tr>
-  <% end %>
-  <tr class="total_line">
-  	<td cosplan="2">Итого</td>
-  	<td class=:total_cell><%= @cart.total_price %> грн</td>
-  </tr>
-
-</table>
-
-
-
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
-<%= link_to 'Back', :back %> | 
-<br/><br/>
-<%= button_to 'Очистить корзину заказа', cart_path(@cart), method: :delete,
-	datd: {confirm: 'Вы уверены что хотите очистить корзину заказа?'}, 
-	class: 'btn btn-danger btn-sm' %>
+<%= render @cart %>
