--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
     <hr/>
     <%= debug(params) if Rails.env.development? %> 
     <hr/>
-    <%= session.inspect %>
+    <%= @product.inspect %>
+    <%= @product_types.inspect %>
   </div>
   
   </body>
