--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,11 @@
       </ul>
     
       <ul class="nav navbar-nav navbar-right">
+        <% if user_login %>
+          <li id="cart-button">
+            <%= link_to 'Мой заказ', cart_path(@cart) %>
+          </li>
+        <% end %>
         <% if user_signed_in? %>
           <li id="header_name">Здравствуйте, <%= current_user.name %>  | </li>
           <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: "btn btn-primary btn-sm active" %>
