--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_login %>
           <li id="cart-button">
-            <%= link_to 'Мой заказ', cart_path(@cart) %>
+            <%= link_to 'Мой заказ', cart_path(id: @cart.id) %>
           </li>
         <% end %>
         <% if user_signed_in? %>
