--- a/app/views/line_items/edit.html.erb
+++ b/app/views/line_items/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Line Item</h1>
 
-<%= render 'form', line_item: @line_item %>
+<%= render 'line_items/form_line_item_quantity', line_item: @line_item %>
 
 <%= link_to 'Show', @line_item %> |
 <%= link_to 'Back', line_items_path %>
