add update quantity of line items

--- a/app/views/line_items/edit.html.erb
+++ b/app/views/line_items/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'line_items/form_line_item_quantity', line_item: @line_item %>
 
-<%= link_to 'Show', @line_item %> |
-<%= link_to 'Back', line_items_path %>
+<%= link_to 'Back', :back %>
