add partial for admin menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
       <div class="row">
         <div class="col-lg-12">
 
+          <!-- меню администратора -->
+          <% if user_admin %>
+            <%= render 'layouts/admin_menu' %>
+          <% end %>
+          
           <!-- вывод уведомлений и ошибок -->
           <% if notice != nil %>
             <p class="alert alert-success"><%= notice %></p>
