add line_items quantity validation

--- a/app/views/line_items/edit.html.erb
+++ b/app/views/line_items/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Line Item</h1>
+<h1>Укажите количество</h1>
 
 <%= render 'line_items/form_line_item_quantity', line_item: @line_item %>
 
