--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Order</h1>
+<h1>Оформляем заказ</h1>
 
 <%= render 'form', order: @order %>
 
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Back', :back %>
