--- a/app/views/store/show.html.erb
+++ b/app/views/store/show.html.erb
@@ -2,6 +2,13 @@
 
 <br/>
 
+<% if current_user %>
+  Группы наших заказчиков: 
+  <%#= render %> | <%= link_to 'Создать группу', new_group_path %>
+<% end %>
+
+<hr/>
+
 <%= link_to 'Все меню |', store_index_path %>
 
 <!-- рендерим партиал с типом меню + ссылку для добавления еще одного типа меню -->
