--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,14 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Name:</strong>
+  <strong>Название группы:</strong>
   <%= @group.name %>
 </p>
 
 <p>
-  <strong>User:</strong>
+  <strong>Создатель:</strong>
   <%= @group.user %>
 </p>
 
 <%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Back', root_path %>
