add delete Group method

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,5 +8,5 @@
   <%= @group.user %>
 </p>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', root_path %>
+<%= link_to 'Редактировать', edit_group_path(@group) %> |
+<%= link_to 'Назад', root_path %>
