--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Group</h1>
+<h1>Редактирование группы</h1>
 
-<%= render 'form', group: @group %>
+<%= render 'form_edit', group: @group %>
 
-<%= link_to 'Show', @group %> |
 <%= link_to 'Back', groups_path %>
