--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -5,7 +5,7 @@
 <% if current_user %>
   Группы наших заказчиков: <br/>
   <%= render partial: 'groups/group_list', collection: @all_groups, as: 'group' %> | 
-  <%= link_to 'Создать группу', new_group_path %>
+  <%= link_to fa_icon(' plus-square') + 'Создать группу', new_group_path %>
 <% end %>
 
 <hr/>
