--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,11 +5,18 @@
 
 <p>
   <strong>Создатель:</strong>
-  <%= @group.user %>
+  <%= @group.user.name %>
 </p>
 
 <% if current_user.id == @group.user_id %>
   <%= link_to 'Редактировать', edit_group_path(@group) %> |
 <% end %>
+
+<% if current_user.id != @group.user_id %>
+  <%= button_to 'Хочу вступить в группу', 
+  		joiners_path(group_id: @group.id, user_id: current_user.id), 
+  		class: 'btn btn-warning btn-sm' %> |
+<% end %>
+
 
 <%= link_to 'Назад', root_path %>
