--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -9,8 +9,12 @@
 </p>
 
 <% if current_user.id == @group.user_id %>
-  Подали запрос на вступление в группу:<br/>
-  <%= render partial: 'groups/joiners_list', collection: @joiners, as: 'joiner' %>
+  
+  <% if @joiners %>
+    Подали запрос на вступление в группу:<br/>
+    <%= render partial: 'groups/joiners_list', collection: @joiners, as: 'joiner' %>
+  <% end %>
+  
   <hr/>
 
   <%= link_to 'Редактировать', edit_group_path(@group) %> |
