--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,6 +8,13 @@
   <%= @group.user.name %>
 </p>
 
+<p>
+  <strong>Участники группы:</strong>
+  <% @group.members.each do |member| %>
+    <%= member.user.name %>,
+  <% end %>
+</p>
+
 <% if current_user.id == @group.user_id %>
   
   <% if @joiners %>
@@ -20,11 +27,15 @@
   <%= link_to 'Редактировать', edit_group_path(@group) %> |
 <% end %>
 
-<% if current_user.id != @group.user_id %>
+<% if current_user_already_send_join_to_group  %>
+  <button type="button" class="btn btn-warning btn-sm disabled">Заявка уже отправлена</button>
+<% elsif current_user.id != @group.user_id %>
   <%= button_to 'Хочу вступить в группу', 
   		joiners_path(group_id: @group.id, user_id: current_user.id), 
   		class: 'btn btn-warning btn-sm' %> |
 <% end %>
+
+
 
 
 <%= link_to 'Назад', root_path %>
