--- a/app/views/group_store/_group_store_product_type.html.erb
+++ b/app/views/group_store/_group_store_product_type.html.erb
@@ -1,1 +1,1 @@
-| <%= link_to product_type.title, product_type_path(product_type) %> |
+| <%= link_to product_type.title, group_store_path(product_type) %> |
