--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -24,6 +24,7 @@
   
   <hr/>
 
+  <%= link_to 'Меню общего заказа', group_store_index_path %> |
   <%= link_to 'Редактировать', edit_group_path(@group) %> |
 <% end %>
 
