--- a/app/views/group_store/index.html.erb
+++ b/app/views/group_store/index.html.erb
@@ -2,8 +2,7 @@
 
 <br/>
 
-<% @group = Group.(session[:group_id]) %>
-Текущая группа: <%#= @group.name %><br/>
+Текущая группа: <%= @group.name %><br/>
 
 <hr/>
 
@@ -25,7 +24,7 @@
     </thead>
       
     <!-- рендерим через партиал полный список всех типов блюд -->
-    <%= render partial: 'group_store/group_product_table', collection: @products_all, as: 'product_table' %>
+    <%#= render partial: 'group_store/group_product_table', collection: @products_all, as: 'product_table' %>
        
   </table>
 </div>
