add method to find group cart

--- a/app/views/group_store/index.html.erb
+++ b/app/views/group_store/index.html.erb
@@ -24,7 +24,7 @@
     </thead>
       
     <!-- рендерим через партиал полный список всех типов блюд -->
-    <%#= render partial: 'group_store/group_product_table', collection: @products_all, as: 'product_table' %>
+    <%= render partial: 'group_store/group_product_table', collection: @products_all, as: 'product_table' %>
        
   </table>
 </div>
