add create method to group_line_item

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
     <% if Rails.env.development? %> 
       <%= @group.inspect %><br/>
       <%= @group_cart.inspect %><br/>
-      <%= current_user.inspect %><br/>
+      <%= @group_line_item.inspect %><br/>
     <% end %>
   </div>
   
