--- a/app/views/group_line_items/_group_line_item.html.erb
+++ b/app/views/group_line_items/_group_line_item.html.erb
@@ -3,7 +3,7 @@
   <td><%= group_line_item.product.description %></td>
   <td><%= group_line_item.quantity %> шт</td>
   <td class="item_price">
-  	<%#= my_number_to_currency(line_item.total_price) %> |
+  	<%= my_number_to_currency(group_line_item.total_price) %> |
     <%= link_to fa_icon('pencil-square-o') + 'ред', edit_group_line_item_path(id:group_line_item.id) %> |
     <%= link_to fa_icon('window-close-o') + 'удал', group_line_item_path(id: group_line_item.id),
     	method: :delete, data: {confirm: 'удалить товар из заказа?'}, 
