solve problem with group_cart: destroy_all

--- a/app/views/group_carts/_group_cart.html.erb
+++ b/app/views/group_carts/_group_cart.html.erb
@@ -13,7 +13,8 @@
 
 <%= link_to 'Назад', :back %> | 
 <br/><br/>
-<%= button_to 'Очистить корзину заказа', group_cart_path(@group_cart), method: :delete,
+<%= button_to 'Очистить корзину заказа', group_cart_path(group_id: @group.id,
+			id: @group_cart.id), method: :delete, 
 	data: {confirm: 'Вы уверены что хотите очистить корзину заказа?'}, 
 	class: 'btn btn-danger btn-sm' %> |
 <%#= button_to 'Оформить заказ', new_order_path, method: :get,
