create group order

--- a/app/views/group_carts/_group_cart.html.erb
+++ b/app/views/group_carts/_group_cart.html.erb
@@ -17,5 +17,5 @@
 			id: @group_cart.id), method: :delete, 
 	data: {confirm: 'Вы уверены что хотите очистить корзину заказа?'}, 
 	class: 'btn btn-danger btn-sm' %> |
-<%#= button_to 'Оформить заказ', new_order_path, method: :get,
+<%= button_to 'Оформить заказ', new_group_order_path, method: :get,
 	class: 'btn btn-success btn-sm' %> |
