--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,8 @@
     <% if Rails.env.development? %> 
       <%= @group.inspect %><br/>
       <%= @group_cart.inspect %><br/>
-      <%= @group_line_item.inspect %><br/>
+      <%= @group_order.inspect %><br/>
+      <%= @my_group_order.inspect %><br/>
     <% end %>
   </div>
   
